--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_to_favorites">Add to Favorites</string>
     <string name="trailers">Trailers:</string>
+    <string name="sort_order">Sort Order</string>
+
+    <string name="most_popular">Most Popular</string>
+    <string name="top_rated">Top Rated</string>
+    <string name="app_title">Popular Movies</string>
+
 </resources>
